2001-04-21  Dave Peticolas  <dave@krondo.com>

	* src/guile/gnc-helpers.c: more work on scm<->query.

2001-04-20  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-report.c: raise app of new report to top

	* src/register/recncell.c: add confirmation callback

	* src/SplitLedger.c: implement reconcile confirm cb

	* src/gnome/gnc-html.c: add missing include

	* src/gnome/dialog-transfer.c: fix spelling

2001-04-20  Bill Gribble  <grib@billgribble.com>

	* src/gnome/dialog-column-view.c: maintain the report window
	edited list when closing dialog.  raise an existing edit dialog.

	* src/gnome/gnc-html.c: make sure we know about options editors 
	launched from gnc-options: urls

	* src/gnome/window-report.c: numerous changes to improve handling
	of options dialogs.
	
	* src/scm/report.scm: new function, gnc:report-edit-options.  	

2001-04-20  Dave Peticolas  <dave@krondo.com>

	* src/guile/gnc-helpers.c: remove cruft. work on converting
	Query objects to and from a scheme representation (unfinished)

	* src/guile/gnc.gwp: wrap more of the Query enums

	* src/engine/Query.c (xaccQueryAddAccountGUIDMatch): new func

	* src/scm/options.scm: add a query option type

	* src/scm/report/report-list.scm: don't bother hiding tax report

2001-04-19  Bill Gribble  <grib@billgribble.com>

	* src/gnome/top-level.c: add call to skeleton "welcome" report 
	if user has not run 1.5/1.6 before

	* src/scm/html-document.scm: changes to make sure styles are 
	set for component reports in multicolumn view 

	* src/scm/report.scm: clean up rendering with/without headers

	* src/scm/report/stylesheet-plain.scm: get rid of <center> tag
	on <body> 

	* src/scm/report/welcome-to-gnucash.scm: new report and function
	to set up welcome to gnucash report

2001-04-19  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-item-edit.c (item_edit_draw_info): fix
	some left-right scrolling glitches

	* src/gnome/dialog-tax-info.c: implement tax info api
